# ml-sampleplan

./: ACKNOWLEDGMENTS.md  Makefile  README.md  pyproject.toml
apple_sampleplan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/: compute_asns.py  monte_carlo_simulate_asns.py  plot_asns.py  plot_ci_exact_vs_midp.py  plot_oc_curves.py  plot_sample_size_precision.py  real_world_studies.py  simulate_qa.py  util.py
plots/: sample_size_precision_10.csv  sample_size_precision_25.csv  sample_size_precision_5.csv
sampleplan/: confidence_interval.py  hypothesis_testing.py  sprt.py
sampleplan/acceptance_sampling/: __init__.py  double.py  ocr.py  sequential.py  single.py  util.py
scripts/: ci_sampling.py  single_sampling.py
tests/: test_acceptance_sampling_double.py  test_acceptance_sampling_sequential_binomial.py  test_acceptance_sampling_sequential_hypergeometric.py  test_acceptance_sampling_single.py  test_confidence_interval.py
