[tool.poetry]
name = "sampleplan"
version = "0.1.0"
description = ""
authors = ["Jan-Christoph Klie <jklie@apple.com>"]
license = "Apple Sample Code License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "<2"
scipy = "^1.14.0"
numba = "^0.60.0"


[tool.poetry.group.paper.dependencies]
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
diskcache = "^5.6.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
